crates/ty_python_semantic/resources/mdtest/snapshots/invalid_union_call.md_-_Calling_a_union_of_function_types_-_Try_to_cover_all_possible_reasons_-_Cover_keyword_argument_related_reasons.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_union_call.md - Calling a union of function types - Try to cover all possible reasons - Cover keyword argument related reasons
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_union_call.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def any(*args, **kwargs) -> int:
 2 |     return 0
 3 | 
 4 | def f1(name: str) -> int:
 5 |     return 0
 6 | 
 7 | def _(n: int):
 8 |     if n == 0:
 9 |         f = f1
10 |     else:
11 |         f = any
12 |     y = f("foo", name="bar", unknown="quux")  # error: [invalid-union-call]
```

# Diagnostics

```
error: lint:invalid-union-call: Union type `(def f1(name: str) -> int) | (def any(*args, **kwargs) -> int)` is not callable because of one or more incompatible variants
  --> src/mdtest_snippet.py:12:9
   |
10 |     else:
11 |         f = any
12 |     y = f("foo", name="bar", unknown="quux")  # error: [invalid-union-call]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: Cannot call union variant `def f1(name: str) -> int` because there were multiple values provided for parameter `name` of function `f1`
  --> src/mdtest_snippet.py:12:18
   |
10 |     else:
11 |         f = any
12 |     y = f("foo", name="bar", unknown="quux")  # error: [invalid-union-call]
   |                  ^^^^^^^^^^
   |
info: Cannot call union variant `def f1(name: str) -> int` because the argument `unknown` does not match any known parameter of function `f1`
  --> src/mdtest_snippet.py:12:30
   |
10 |     else:
11 |         f = any
12 |     y = f("foo", name="bar", unknown="quux")  # error: [invalid-union-call]
   |                              ^^^^^^^^^^^^^^
   |
info: `lint:invalid-union-call` is enabled by default

```
